projecct 2 a : pre final

--- a/Project_2_a/Makefile
+++ b/Project_2_a/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 
-CFLAGS = -g -Wall -Wextra -lrt -fforward-propagate -mfpu=neon -march=armv7-a -mfloat-abi=hard -mcpu=cortex-a8 -mtune=cortex-a8 -ffast-math -fsingle-precision-constant -fmodulo-sched -fmodulo-sched-allow-regmoves -fgcse-las -fgcse-after-reload -fwhole-program -funsafe-math-optimizations -fopt-info-vec-missed $(MACROS) -ftree-vectorize -ftree-vectorizer-verbose=7 -O3 
-#CFLAGS = -g -Wall -Wextra -lrt -mfpu=neon -march=armv7-a -mcpu=cortex-a8 -mtune=cortex-a8 -ftree-vectorize -ftree-vectorizer-verbose=8 -O3
+#CFLAGS = -g -Wall -Wextra -lrt -fforward-propagate -mfpu=neon -march=armv7-a -mfloat-abi=hard -mcpu=cortex-a8 -mtune=cortex-a8 -ffast-math -fsingle-precision-constant -fmodulo-sched -fmodulo-sched-allow-regmoves -fgcse-las -fgcse-after-reload -fwhole-program -funsafe-math-optimizations -fopt-info-vec-missed $(MACROS) -ftree-vectorize -ftree-vectorizer-verbose=7 -O3 
+CFLAGS = -g -Wall -Wextra -lrt -mfpu=neon -march=armv7-a -mcpu=cortex-a8 -mtune=cortex-a8 -ftree-vectorize -ftree-vectorizer-verbose=7 -O3 $(MACROS) -fopt-info-vec-missed
 SOURCES=$(wildcard ./*.c)
 OBJECTS=$(subst src,obj,$(SOURCES:.c=.o))
 
