--- a/Project_2_b/Makefile
+++ b/Project_2_b/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -c -Wall -march=armv7-a -mfpu=neon -mcpu=cortex-a8 -mtune=cortex-a8 -O3 -ggdb -ffast-math -fsingle-precision-constant -fno-tree-loop-vectorize -fno-tree-vectorize -fno-unroll-loops
 #CFLAGS = -c -Wall -march=armv7-a -mfpu=neon -mfloat-abi=hard -mcpu=cortex-a8 -mtune=cortex-a8 -O3 -ggdb -ffast-math -fsingle-precision-constant -fno-tree-loop-vectorize -fno-tree-vectorize -fno-unroll-loops
 
-test: main.o main.s
+alpha.out: main.o main.s
 	$(CC) main.o -pg -g -static -lrt -lm -o $@
 
 main.s: main.c
