--- a/Project_2_b/Makefile
+++ b/Project_2_b/Makefile
@@ -1,18 +1,18 @@
 CC = gcc
-CFLAGS = -c -Wall -march=armv7-a -mfpu=neon -mcpu=cortex-a8 -mtune=cortex-a8 -O3 -ggdb -ffast-math -fsingle-precision-constant -fno-tree-loop-vectorize -fno-tree-vectorize -fno-unroll-loops
+CFLAGS = -c -Wall -march=armv7-a -mfpu=neon -mcpu=cortex-a8 -mtune=cortex-a8 -O3 -ffast-math -fsingle-precision-constant -fno-tree-loop-vectorize -fno-tree-vectorize -fno-unroll-loops
 #CFLAGS = -c -Wall -march=armv7-a -mfpu=neon -mfloat-abi=hard -mcpu=cortex-a8 -mtune=cortex-a8 -O3 -ggdb -ffast-math -fsingle-precision-constant -fno-tree-loop-vectorize -fno-tree-vectorize -fno-unroll-loops
 
-all: main.o main.s
-	$(CC) main.o -pg -g -static -lrt -lm -o alpha.out
+all: alpha_time.o alpha_time.s
+	$(CC) alpha_time.o -pg -g -static -lrt -lm -o alpha_time
 
-main.s: main.c
-	$(CC) $(CFLAGS) -S main.c -o $@
+alpha_time.s: alpha_time.c
+	$(CC) $(CFLAGS) -S alpha_time.c -o $@
 
-main_list.s: main.c
-	$(CC) $(CFLAGS) -Wa,-adhln -g main.c -c > main_list.s
+alpha_time_list.s: alpha_time.c
+	$(CC) $(CFLAGS) -Wa,-adhln -g alpha_time.c -c > alpha_time_list.s
 
-out.out: main.s
-	$(CC) main.s -pg -g -static -lrt -lm -o $@
+out.out: alpha_time.s
+	$(CC) alpha_time.s -pg -g -static -lrt -lm -o $@
 
 clean:
 	rm -f test *.o  *.s out.out
